objdiff-core/tests/snapshots/arch_x86__display_section_ordering.snap
---
source: objdiff-core/tests/arch_x86.rs
expression: section_display
---
[
    SectionDisplay {
        id: ".text-0",
        name: ".text",
        size: 47,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 1,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-1",
        name: ".text",
        size: 65,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 3,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-2",
        name: ".text",
        size: 5,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 5,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-3",
        name: ".text",
        size: 141,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 7,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-4",
        name: ".text",
        size: 120,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 9,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-5",
        name: ".text",
        size: 378,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 11,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-6",
        name: ".text",
        size: 130,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 13,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-7",
        name: ".text",
        size: 123,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 15,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-8",
        name: ".text",
        size: 70,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 17,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-9",
        name: ".text",
        size: 90,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 19,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-10",
        name: ".text",
        size: 82,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 21,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-11",
        name: ".text",
        size: 336,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 23,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-12",
        name: ".text",
        size: 193,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 25,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-13",
        name: ".text",
        size: 544,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 27,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-14",
        name: ".text",
        size: 250,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 29,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-15",
        name: ".text",
        size: 89,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 31,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
    SectionDisplay {
        id: ".text-16",
        name: ".text",
        size: 119,
        match_percent: None,
        symbols: [
            SectionDisplaySymbol {
                symbol: 33,
                is_mapping_symbol: false,
            },
        ],
        kind: Code,
    },
]
